--- a/pagetwo.html
+++ b/pagetwo.html
@@ -23,7 +23,7 @@
 <audio 
         controls autoplay
         src="/audio/Vultures-3.mp3">
-        Your browser does not support the <code>audio</code> element.
+        Your browser does not support the audio element.
 </audio>
 </body>
 </html>
