--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
 <body>
     <div class="container1">
         <div class="header">Vultures | John Mayer | CONTINUUM</div>
-            <div class="container2">
-                <div class="animate__animated animate__heartBeat">WELCOME</div>
-                <div class="animate__animated animate__flash"><a href="pageone.html">follow along to enjoy the music</a></div>
-            </div>
+                <div class="container2">
+                    <div class="animate__animated animate__heartBeat">WELCOME</div>
+                    <div class="animate__animated animate__flash"><a href="pageone.html">follow along to enjoy the music</a></div>
+                    <audio controls autoplay
+                    src="/audio/Vultures-1.mp3">
+                    Your browser does not support the <code>audio</code> element.
+                </audio>
+                </div>
+            
         <div class="footer">© Copyright Shaina Suri 2021</div>
     </div>
 
-    <audio 
-        controls autoplay
-        src="/audio/Vultures-1.mp3">
-        Your browser does not support the <code>audio</code> element.
-    </audio>
+    
 </body>
 </html>
