--- a/pageone.html
+++ b/pageone.html
@@ -13,16 +13,16 @@
 <body>
 <div class="container1">
     <div class="header">Vultures | John Mayer | CONTINUUM</div>
-        <div class="animate__animated animate__rotateOutUpLeft">Some of us,</div>
-        <div class="animate__animated animate__fadeOut">we're hardly ever here</div>
-        <div class="animate__animated animate__zoomOut"><a href="pagetwo.html">The rest of us, we're born to disappear</a></div>
+            <div class="animate__animated animate__rotateOutUpLeft">Some of us,</div>
+            <div class="animate__animated animate__fadeOut">we're hardly ever here</div>
+            <div class="animate__animated animate__zoomOut"><a href="pagetwo.html">The rest of us, we're born to disappear</a></div>
+        <audio controls autoplay
+            src="audio/Vultures-2.mp3" type="mp3">
+            Your browser does not support the <code>audio</code> element.
+        </audio>
     <div class="footer">© Copyright Shaina Suri 2021</div>
-
-<audio 
-    controls autoplay
-    src="/audio/Vultures-2.mp3">
-    Your browser does not support the <code>audio</code> element.
-</audio>
 </div>
+
+
 </body>
 </html>
